# verilib-structure

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
scripts/: README.md  structure.py  structure_atomize.py  structure_create.py  structure_specify.py  structure_verify.py
src/: certs.rs  config.rs  frontmatter.rs  main.rs  probe.rs  utils.rs
src/commands/: atomize.rs  create.rs  mod.rs  specify.rs  verify.rs
